testsuite/tests/typing-recmod/t07bad.compilers.reference
File "t07bad.ml", line 10, characters 15-51:
10 | module rec A : sig type 'a t = <m: 'a list A.t> end
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This recursive type is not regular.
       The type constructor A.t is defined as
         type 'a A.t
       but it is used as
         'a list A.t.
       All uses need to match the definition for the recursive type to be regular.
